--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag distrobox-dev:$(date +%s)
+      run: docker build . --file Dockerfile --tag ghcr.io/${{ github.repository_owner }}/distrobox-dev:2025.6.1
+
+    - name: Push Docker image
+      run: docker push ghcr.io/${{ github.repository_owner }}/distrobox-dev:2025.6.1
