--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Build and Push Docker image with YYYY.M.N Tag
 
 on:
   push:
@@ -8,15 +8,48 @@ on:
 
 jobs:
 
-  build:
-
+  build-and-push:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+      packages: write
+      id-token: write
+
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Needed to read git history and tags
 
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ghcr.io/nek000/distrobox-dev:2025.6.1
+      - name: Get date and version tag
+        id: tag
+        run: |
+          YEAR=$(date +%Y)
+          MONTH=$(date +%-m)
+          
+          # Find the highest N for the current year and month
+          PREFIX="$YEAR.$MONTH."
+          LAST=$(git tag --list "${PREFIX}*" | sed "s/^$PREFIX//" | sort -nr | head -n 1)
+          if [[ -z "$LAST" ]]; then
+            NEXT=1
+          else
+            NEXT=$((LAST + 1))
+          fi
+          VERSION="$YEAR.$MONTH.$NEXT"
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "VERSION=$VERSION"
+         
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Push Docker image
-      run: docker push ghcr.io/nek000/distrobox-dev:2025.6.1
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/nek000/distrobox-dev:${{ env.VERSION }}
